new function plainFile, slurm scheduler with own submitter and backend changes to use it